Fixed the blurred About link; Redone some icons

--- a/src/index.css
+++ b/src/index.css
@@ -165,9 +165,8 @@ button:hover {
 }
 
 .shordy{
-  background-image: url('/public/Hyrule.png'), linear-gradient(to bottom,rgb(216, 180, 254),rgba(0, 0, 0, 0));
-  background-blend-mode: multiply;
-  mask-image: linear-gradient(to bottom, black, transparent);
+  background-image: url('/public/Hyrule.png'), linear-gradient(to bottom, rgba(0,0,0,0), rgba(255,255,255, 1));
+  background-blend-mode: lighten;
   background-size: cover;
   background-repeat: no-repeat;
 }
